feat: update avatar image API
